2019-02-16  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mailbox-local: Do not leak LibBalsaMessage

	* libbalsa/mailbox_local.c (lbml_message_pool_take_message): new
	name for 'lbml_add_message_to_pool', emphasizing that it takes
	over the reference count;
	(lbm_local_get_message_with_msg_info): use the new name;
	(libbalsa_mailbox_local_get_message): always return a reference
	to the LibBalsaMessage.

2019-02-16  Peter Bloomfield  <pbloomfield@bellsouth.net>

	imap-mbox-handle: Do not leak a GNode tree

	* libbalsa/imap/imap-handle.c (imap_mbox_handle_finalize):
	destroy the thread-root GNode tree.

2018-02-15  Albrecht Dreß  <albrecht.dress@arcor.de>

	Relax secret key selection

	Currently, the user can only select a key with a uid which matches
	the account's email address.  However, there are use-cases where
	this is not sufficient.  At work, we have an isolated network
	with “internal” email addresses.  Outgoing messages are
	re-written to public addresses, but the internal ones shall
	not be exposed to the outside world (see e.g. [1]), i.e. the
	key /must not/ carry a user-id for the internal address.  Thus,
	neither auto-selection nor defining the key id in the gui works
	(it would be possible to run gpg[sm] on the console to print
	the id, and then copy it into the input field, though).

	The patch enables selecting any valid private key in the identity
	dialogue, but /not/ when a message shall be sent and the private
	key cannot be determined.  Note that the vast majority of users
	will probably never use this feature, i.e. use automatic key
	selection (id is empty in the identity setup).

	* libbalsa/libbalsa-gpgme.c (libbalsa_gpgme_get_seckey): relax
	the selection of the private key in the identity setup dialogue

2018-02-15  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix broken decryption of s/mime messages loaded from imap

	* libbalsa/mailbox_imap.c
	(libbalsa_mailbox_imap_fetch_structure): fetch part if it is not